--- a/index.html
+++ b/index.html
@@ -5,131 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Automation Practice | Fresher Dev</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />    
+    <link rel="stylesheet" href="./assets/styles/index.css">
   </head>
   <body>
     <div class="jumbotron">
       <h1 class="display-4">Fresher Dev</h1>
-      <p class="lead">
-        Trang web demo giúp các bạn thực hành các bài tập Automation tại Fresher
-        Dev.
-      </p>
+      <p class="lead">Trang web demo giúp các bạn thực hành các bài tập Automation tại Fresher Dev.</p>
       <hr class="my-4" />
-      <a
-        class="btn btn-warning btn-lg"
-        href="https://www.youtube.com/playlist?list=PLWAmkUsnTP9ft9iXCzZnhAnTdhLD1FVfL"
-        role="button"
-        >Xem video</a
-      >
+      <a class="btn btn-warning btn-lg" href="https://www.youtube.com/playlist?list=PLWAmkUsnTP9ft9iXCzZnhAnTdhLD1FVfL" role="button" target="_blank">Xem video</a>
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-sm mb-4">
-          <div class="card" style="width: 18rem">
-            <img src="./assets/img/b1.png" class="card-img-top" alt="Bài 1" />
-            <div class="card-body">
-              <h5 class="card-title">Bài 1. Giới thiệu</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Vào bài học</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm mb-4">
-          <div class="card" style="width: 18rem">
-            <img src="./assets/img/b1.png" class="card-img-top" alt="Bài 1" />
-            <div class="card-body">
-              <h5 class="card-title">Bài 1. Giới thiệu</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Vào bài học</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm mb-4">
-          <div class="card" style="width: 18rem">
-            <img src="./assets/img/b1.png" class="card-img-top" alt="Bài 1" />
-            <div class="card-body">
-              <h5 class="card-title">Bài 1. Giới thiệu</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Vào bài học</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm mb-4">
-          <div class="card" style="width: 18rem">
-            <img src="./assets/img/b1.png" class="card-img-top" alt="Bài 1" />
-            <div class="card-body">
-              <h5 class="card-title">Bài 1. Giới thiệu</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Vào bài học</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm mb-4">
-          <div class="card" style="width: 18rem">
-            <img src="./assets/img/b1.png" class="card-img-top" alt="Bài 1" />
-            <div class="card-body">
-              <h5 class="card-title">Bài 1. Giới thiệu</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Vào bài học</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm mb-4">
-          <div class="card" style="width: 18rem">
-            <img src="./assets/img/b1.png" class="card-img-top" alt="Bài 1" />
-            <div class="card-body">
-              <h5 class="card-title">Bài 1. Giới thiệu</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Vào bài học</a>
-            </div>
-          </div>
-        </div>        
-      </div>
+      <div class="row" id="content"></div>
     </div>
   </body>
 
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="./assets/js/index.js"></script>
 </html>
