--- a/lessons/lession7/index.html
+++ b/lessons/lession7/index.html
@@ -95,7 +95,7 @@
       <!-- Example single danger button -->
       <h3>Dropdown</h3>
       <div class="dropdown">
-        <a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-expanded="false"> Dropdown link </a>
+        <a class="btn btn-warning dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-expanded="false"> Dropdown link </a>
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <span class="dropdown-item" href="#" onclick="dropdownChange('Action 1')">Action 1</span>
